--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -41,15 +41,11 @@
         android:id="@+id/e_key"
         style="@style/KeyStyle"
         android:layout_width="50dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="343dp"
         android:background="@color/yellow"
         android:onClick="playE"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/d_key"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="145dp"
+        tools:layout_editor_absoluteY="8dp" />
 
     <Button
         android:id="@+id/f_key"
